# tak-webview-cesium

./: .env.example  .gitignore  .pre-commit-config.yaml  .todo.md.kate-swp  BUILDING.md  DEVELOPMENT.md  Dockerfile  FUNDING.yml  LICENSE.txt  README.md  bug.txt  customlayers.json  docker-compose.yml  error.txt
.github/workflows/: docker-build.yml
backend/: .dockerignore  .env.example  README.md  main.py  pyproject.toml
backend/app/: auth.py  config.py  connection.py  iconsets.py  layers.py  main.py  tak_client.py
backend/tests/: test_config.py  test_cot_parsing.py
frontend/: .env.example  .eslintrc.json  config.js  eslint.config.js  index.html  main.js  main.test.js  package-lock.json  package.json  state.js  utils.js  viewer.js  vite.config.js  websocket.js
frontend/iconsets/PS_AIR_ICONSv8/: iconset.xml
frontend/iconsets/iconset_falconview/: iconset.xml
frontend/iconsets/iconset_incident_management/: iconset.xml
frontend/iconsets/iconset_ps_air/: iconset.xml
frontend/iconsets/iconset_responder/: iconset.xml
frontend/iconsets/iconset_wildfire/: iconset.xml
frontend/public/: info.html
frontend/public/locales/: de.json  en.json  fi.json  sv.json
plans/: deep-analysis-fix.md  fix-freeze-and-visibility.md
